<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sudoku</string>
    <string name="action_settings">Settings</string>
    <string name="action_scorecard">Scorecard</string>
    <string name="first">1</string>
    <string name="second">2</string>
    <string name="third">3</string>
    <string name="fourth">4</string>
    <string name="fifth">5</string>
    <string name="sixth">6</string>
    <string name="seventh">7</string>
    <string name="eight">8</string>
    <string name="ninth">9</string>
    <string name="clear">Clear</string>
    <string name="newPuzzle">New Puzzle</string>
    <string name="resumePuzzle">Resume Puzzle</string>
    <string name="savePuzzle">Save Puzzle</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="sudokuplayer">Sudoku Player</string>
    <string name="Tekedge">Powered by: TeKedge - Infosys</string>
    <string name="alertmsg">Do you want to save current game?</string>
    <string name="time">"Time : "</string>
    <string name="timer">00:00</string>
    <string name="level">"Level : "</string>
    <string name="sudoku_player">Sudoku Player</string>
    <string name="app_version">App Version</string>
    <string name="pooja_goel">Pooja Goel (169019)</string>
    <string name="nitin_sahdev">Nitin Sahdev (169018)</string>
    <string name="developers">Developers</string>
    <string name="buttonSubmit">Submit</string>
    <string name="scorecardTitle">Scorecard</string>
    <string name="totalPuzzleTime">Total time</string>
    <string name="avgTimePerMove">Average time per move</string>
    <string name="numOfMoves">Number of Moves</string>
    <string name="timeOfLastMove">Last move time</string>
    <string name="incompletePuzzle">Sudoku TeKedge \n\nIt seems you have not yet completed the puzzle</string>
    <string name="timeIsOver">Unfortunately you did not make a move in the stipulated time. Your game is over. \n\nPlease try again</string>
    <string name="unsuccessful_attempt">Sudoku TeKedge \n\nThis is not the correct solution. \nYou should try again</string>
    <string name="puzzleCompletedSuccess">"Hurray!!! You have successfully completed the puzzle in "</string>
    <string name="max_time_allowed_text">Max time allowed between moves</string>
    
    <string name="easyUnsolvedPuzzle">"###7##36#67##4###14#9#5#7##43###6#7#9##1#4##6#1#9###45##5#1#6#72#9#6##35#67#24###"</string>
    <string name="mediumUnsolvedPuzzle">"#2#89##7#4#76#1#85###4#3#2#45#9##6#2##3#4####8####7#94##9#48####1#7##8#2#8##31###"</string>
    <string name="complexUnsolvedPuzzle">"###6###9#2##5#1#347##4###6##2##7##5##9#68#7#3##7##5#28#1#2#8#6#3######1##74###2##"</string>
    
    <string name="easySolvedPuzzle">"581792364672843591439651782438256179957184326216973845845913627219768435367524198"</string>
    <string name="mediumSolvedPuzzle">"126895374437621985958473126457983612193246578862517394269548731314769852785231649"</string>
    <string name="complexSolvedPuzzle">"435682197269571834781493562826374951195682743347915628519248763326957418874136259"</string>

    <string-array name="max_time_allowed_array">
        <item name="five_minutes">"5 mins"</item>
        <item name="ten_minutes">"10 mins"</item>
        <item name="fifteen_minutes">"15 mins"</item>
        <item name="twenty_minutes">"20 mins"</item>
    </string-array>
    <string-array name="strArray">
        <item name="easy">"Easy"</item>
        <item name="medium">"Medium"</item>
        <item name="hard">"Hard"</item>
    </string-array>

    <string name="title_activity_scorecard">ScorecardActivity</string>

</resources>