<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/settings"
        android:textSize="@dimen/textview_size" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settingsTitle"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:weightSum="100" >

        <TextView
            android:id="@+id/maxTimeAllowedTitle"
            android:layout_width="230dp"
            android:layout_height="51dp"
            android:layout_marginLeft="5dp"
            android:maxLines="2"
            android:text="@string/max_time_allowed_text"
            android:textSize="@dimen/main_menu_text_size" />

        <Spinner
            android:id="@+id/timeBetweenMovesSpinner"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:onClick="OnButtonClicked"
        android:text="@string/Tekedge"
        android:textSize="@dimen/subscript_size" />

</RelativeLayout>