<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#acdcdc" >

    <RelativeLayout
        android:id="@+id/TimerLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/TextViewTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:text="@string/time"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/TextViewTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/TextViewTime"
            android:gravity="right"
            android:text="@string/timer"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/TextViewLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:paddingRight="3dp"
            android:text="@string/level"
            android:textSize="18sp" />
    </RelativeLayout>

    <TableLayout
        android:id="@+id/sudukoTablelayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TimerLayout"
        android:background="@android:color/black"
        android:baselineAligned="true"
        android:gravity="center" >

        <TableRow
            android:id="@+id/mainTableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:baselineAligned="true" >

            <include
                android:id="@+id/r1C1"
                android:layout_gravity="left"
                android:layout_marginRight="1dp"
                layout="@layout/tablerow_square" />

            <include
                android:id="@+id/r1C2"
                android:layout_gravity="center"
                android:layout_marginRight="1dp"
                layout="@layout/tablerow_square" />

            <include
                android:id="@+id/r1C3"
                android:layout_gravity="right"
                android:layout_marginRight="1dp"
                layout="@layout/tablerow_square" />
        </TableRow>

        <TableRow
            android:id="@+id/mainTableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp" >

            <include
                android:id="@+id/r2C1"
                android:layout_gravity="left"
                android:layout_marginRight="1dp"
                layout="@layout/tablerow_square" />

            <include
                android:id="@+id/r2C2"
                android:layout_gravity="center"
                android:layout_marginRight="1dp"
                layout="@layout/tablerow_square" />

            <include
                android:id="@+id/r2C3"
                android:layout_gravity="right"
                layout="@layout/tablerow_square" />
        </TableRow>

        <TableRow
            android:id="@+id/mainTableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp" >

            <include
                android:id="@+id/r3C1"
                android:layout_gravity="left"
                android:layout_marginRight="1dp"
                layout="@layout/tablerow_square" />

            <include
                android:id="@+id/r3C2"
                android:layout_gravity="center"
                android:layout_marginRight="1dp"
                layout="@layout/tablerow_square" />

            <include
                android:id="@+id/r3C3"
                android:layout_gravity="right"
                layout="@layout/tablerow_square" />
        </TableRow>
    </TableLayout>

    <include
        android:id="@+id/input_panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        layout="@layout/input_panel" />

    <Button
        android:id="@+id/btnSubmitPuzzle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/input_panel"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:onClick="onSubmitPuzzle"
        android:text="@string/buttonSubmit"
        android:textSize="@dimen/textview_size" />

</RelativeLayout>